--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button class="btn btn-outline-dark searchbtn" type="button">Search</button>
         </div>
       </form>
-      <img src="Images/rain.png" class="img-fluid mx-auto d-block" alt="Weather Image" style="max-width: 200px; height: auto;">
+      <img src="" class="weatherImage img-fluid mx-auto d-block" style="max-width: 200px; height: auto;">
       <h1 class="mt-3 text-center"><span class="temperature"></span></h1>
       
       <div class="row text-center mt-3">
@@ -58,8 +58,9 @@
       </div>
       <hr>
       <div class="row mt-5">
-        <div class="col-12 bg-dark">
-            <h3 class="text-secondary p-3">Design By<br>Muhammad Jawwad Khan</h3>
+        <div class="col-12">
+            <h3 class="text-secondary p-3">Developed By<br>Muhammad Jawwad Khan</h3>
+            <p class="text-secondary p-3">Developed By<br>Programming Language: Javascript</p>
         </div>
       </div>
     </div>
