--- a/index.html
+++ b/index.html
@@ -15,52 +15,45 @@
       <h5 class="card-title text-center">Weather Application</h5>
       <hr>
       <form class="mb-3 forms">
+        <p class="text-secondary">Click Here Any City Or Country Name To Find Weather</p><br>
         <div class="input-group">
           <input type="text" class="form-control searchfield" placeholder="Enter city name" aria-label="City name" aria-describedby="search-btn">
           <button class="btn btn-outline-dark searchbtn" type="button">Search</button>
         </div>
       </form>
-      <img src="" class="weatherImage img-fluid mx-auto d-block" style="max-width: 200px; height: auto;">
-      <h1 class="mt-3 text-center"><span class="temperature"></span></h1>
-      
+      <img src="images/clear.png" class="weatherImage" style="max-width: 80px; height: 80px;"><br>
+      <h4 class="mt-3 text-center temperature">Temperature:</h4>
       <div class="row text-center mt-3">
         <div class="col">
-          <img src="images/smart-city.png" height="30px" width="30px" alt="">
-          <p class="city"></p>
+          <span>City:</span><p class="city"></p>
         </div>
         <div class="col">
-          <img src="images/citizenship.png" height="30px" width="30px" alt="">
-          <p class="country"></p>
+          <span>Country:</span><p class="country"></p>
         </div>
         <div class="col">
-          <img src="images/humidities.png" height="30px" width="30px" alt="">
-          <p class="humidity"></p>
+          <span>Humidity:</span><p class="humidity"></p>
         </div>
       </div>
       
       <div class="row text-center mt-3">
         <div class="col">
-          <img src="images/windy.png" height="30px" width="30px" alt="">
-          <p class="windSpeed"></p>
+          <span>WindSpeed:</span><p class="windSpeed"></p>
         </div>
         <div class="col">
-          <img src="images/job-seeking.png" height="30px" width="30px" alt="">
-          <p class="Description"></p>
+          <span>Description:</span><p class="Description"></p>
         </div>
         <div class="col">
-          <img src="images/parallel-world.png" height="30px" width="30px" alt="">
-          <p class="Longitude"></p>
+          <span>Longitude:</span><p class="Longitude"></p>
         </div>
         <div class="col">
-          <img src="images/globe.png" height="30px" width="30px" alt="">
-          <p class="Latitude"></p>
+          <span>Latitude:</span><p class="Latitude"></p>
         </div>
       </div>
       <hr>
       <div class="row mt-5">
         <div class="col-12">
             <h3 class="text-secondary p-3">Developed By<br>Muhammad Jawwad Khan</h3>
-            <p class="text-secondary p-3">Developed By<br>Programming Language: Javascript</p>
+            <p class="text-secondary p-3">Programming Language: Javascript</p>
         </div>
       </div>
     </div>
